# ErmineTQ

./: .air.toml  .gitignore  AGENT.md  Makefile  README.md  erminetq.example.toml  go.mod  go.sum  mise.toml
cmd/server/: main.go
docs/: DESIGN.md
examples/: README.md
examples/go/: README.md
examples/go/handlers/: doc.go  file_io.go  http_fetch.go  ollama.go
examples/go/server/: main.go
examples/go/submit/: main.go
examples/python/: README.md  pyproject.toml  submit.py  worker.py
examples/python/bridge/: main.py
internal/api/: broker.go  broker_test.go  doc.go  events.go  events_test.go  handler.go  helpers.go  pull_worker.go  schedules.go  schedules_test.go  server.go  store_iface.go  tasks.go  tasks_test.go  workers.go  workers_test.go
internal/bridge/: client.go  client_test.go  doc.go
internal/config/: config.go  config_test.go  doc.go
internal/dashboard/: doc.go
internal/queue/: doc.go  pool.go  pool_test.go  registry.go  registry_test.go  store_iface.go  worker.go  worker_test.go
internal/scheduler/: doc.go  heartbeat.go  next_run.go  retry.go  scheduler.go  scheduler_test.go  store_iface.go  task_scheduler.go  task_scheduler_test.go
internal/store/: attempts.go  attempts_test.go  claim.go  claim_test.go  control.go  control_test.go  doc.go  export_test.go  id.go  maintenance.go  maintenance_test.go  migrate.go  models.go  schedules.go  schedules_test.go  store.go  store_test.go  tasks.go  tasks_test.go  workers.go  workers_test.go
sdk/python/: pyproject.toml
sdk/python/erminetq/: __init__.py  client.py  worker.py
(+7 files in other folders)
