[project]
name = "erminetq"
version = "0.1.0"
description = "ErmineTQ Python SDK — task queue client and pull worker"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/peifengstudio/erminetq"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
